   
===========
Changes log  
===========

- @version-full@ (@release-date@)

- 2.0.13 (2012-04-18)
    - Bug fixed
       - Fixed user agent name detection for Firefox 12 on Windows.
         Reported by Tim Peierls.
       - Fixed issue with content negotiation in the JAX-RS when
         multiple Accept preferences were expressed by the client.
         Reported by Vincent Massol, Fabio Mancinelli, Anca Luca.

- 2.0.12 (2012-04-06)
    - Bug fixed
       - Fixed the JAX-RS extension that did not introspect the 
         interfaces and parent classes of resource classes.
         Reported and contributed by Shaun Elliott.
       - Relaxed content type header parsing in case of a trailing
         semicolon. Reported by Jean-Baptiste Dusseaut.
       - Fixed handling of Put requests with Jax-Rs extension without any 
         mime type. Reported by Thomas Mortagne.
       - Fixed NPE when setting last segment on Reference.
         Reported by Laszlo Hordos.
       - Fixed OSGi manifest file for the Jackson library that exposes a 
         private package. Reported by Laszlo Hordos.
       - Fixed parsing of Feed using the Rome extension.
         Reported by Andy Dennie.
       - Allowed multiple cookies set at once for JAX-RS.
         Reported and contributed by Grzegorz Godlewski.
       - Fixed namespaces declaration using SaxRepresentation.
         Reported by Nicholas Waltham.
       - Fixed scoring algorithm of the JaxbConverter, detected when used in 
         conjunction with JacksonConverter.
         Reported by Michael Henderson.

    - Misc
        - Updated FreeMarker library to version 2.3.19.

- 2.0.11 (2012-01-25)
    - Bugs fixed
       - Fixed MediaType.includes(MediaType) which returned true with the
         other type was null. Reported by Try Lam.
       - Improved OData client speed by caching costly reflection calls,
         especially on Android. Contributed by Nikhil Purushe.