@@ -4,7 +4,10 @@ Changes log
 ===========
 
 - @version-full@ (@release-date@)
-
+    - Bug fixed
+       - Usage of ranges on representations having unknown size.
+         Reported by Bjorn Roche.
+    
 - 2.0.13 (2012-04-18)
     - Bug fixed
        - Fixed user agent name detection for Firefox 12 on Windows.
